tests/Tree/negative/test014.jvt
-- calling unsupported anoma-verify

function main() : * {
  anoma-verify-with-message(1,2)
}
